--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
 			<artifactId>javafx-fxml</artifactId>
 			<version>11.0.1</version>
 		</dependency>
+		<!-- Thanks for using https://jar-download.com -->
+
 	</dependencies>
 	<build>
 		<plugins>
